# RAG

./: .gitignore  Dockerfile  Dockerfile.ollama  README.md  app.py  config.py  docker-compose.override.yml  docker-compose.yml  pyproject.toml  rag.py  utils.py  vectorstore.py
